# template-hybrid-search-fasthtml

./: .gitignore  .pre-commit-config.yaml  .sesskey  README.md  example.env  pyproject.toml
assets/: custom-styles.css
data/: species-detailed.jsonl  species.json
scripts/: collect-species.py  index-data.py
src/: components.py  main.py
